feat(movie service): adapt modules and add endpoint
- add endpoint for modifying the watched count of a movie
- adapt modules to be able to return list of movies with same name when queried
- the suggestions will be provided for the top wathced movie in the requested movie name list